apps/saleor-dashboard/overlays/stage/patches/replicas-patch.yaml
# Replicas Patch - Dashboard STAGE
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
spec:
  replicas: 2
