apps/saleor-dashboard/overlays/stage/patches/resources-patch.yaml
# Resources Patch - Dashboard STAGE
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
spec:
  template:
    spec:
      containers:
        - name: dashboard
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "384Mi"
