apps/saleor-dashboard/overlays/stage/patches/ingress-patch.yaml
# Ingress Patch - Dashboard STAGE
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-2:827913617839:certificate/d24a33aa-1959-4991-b281-607d5be0d988
    external-dns.alpha.kubernetes.io/hostname: stage-dashboard-kyeol.msp-g1.click
spec:
  rules:
    - host: stage-dashboard-kyeol.msp-g1.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard
                port:
                  number: 80
